// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`type json schema diff visitor when provided with an array 1`] = `
[
  {
    "description": "'stringField' did not match schema",
    "example": [
      "1",
      "2",
      "3",
      true,
    ],
    "expectedType": "string",
    "instancePath": "/stringField",
    "key": "stringField",
    "keyword": "type",
    "kind": "UnmatchedType",
    "propertyPath": "/properties/stringField",
  },
]
`;

exports[`type json schema diff visitor when provided with an object 1`] = `
[
  {
    "description": "'stringField' did not match schema",
    "example": {
      "field": "string",
    },
    "expectedType": "string",
    "instancePath": "/stringField",
    "key": "stringField",
    "keyword": "type",
    "kind": "UnmatchedType",
    "propertyPath": "/properties/stringField",
  },
]
`;

exports[`type json schema diff visitor when provided with another primitive 1`] = `
[
  {
    "description": "'stringField' did not match schema",
    "example": 123,
    "expectedType": "string",
    "instancePath": "/stringField",
    "key": "stringField",
    "keyword": "type",
    "kind": "UnmatchedType",
    "propertyPath": "/properties/stringField",
  },
]
`;

exports[`type json schema diff visitor when provided with null value 1`] = `
[
  {
    "description": "'stringField' did not match schema",
    "example": null,
    "expectedType": "string",
    "instancePath": "/stringField",
    "key": "stringField",
    "keyword": "type",
    "kind": "UnmatchedType",
    "propertyPath": "/properties/stringField",
  },
]
`;
